--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -9,8 +9,127 @@ date: 2016-11-03 10:46:10
 ---
 
 
-# 常用操作
+# 安装、配置
+## 源码安装
+下载源码包：https://dev.mysql.com/downloads/mysql
+![](http://ofyfogrgx.bkt.clouddn.com/mysql_download.png)
 
+安装编译工具：
+```
+yum install ncurses-devel bison openssl-devel bison-devel libaio libaio-devel gcc gcc-c++ cmake -y
+```
+
+**安装脚本**
+这里以mysql-5.5.47.tar.gz为例，指定安装目录是/usr/local/mysql，指定data目录是/usr/local/mysql/data。
+```
+groupadd mysql
+useradd -r -g mysql mysql
+cd /root
+wget http://dev.mysql.com/get/Downloads/MySQL-5.5/mysql-5.5.47.tar.gz/from/http://mysql.he.net/
+tar xvf mysql-5.5.47.tar.gz
+cd mysql-5.5.47/
+cmake -DCMAKE_INSTALL_PREFIX=/usr/local/mysql \
+-DMYSQL_UNIX_ADDR=/usr/local/mysql/mysql.sock \
+-DDEFAULT_CHARSET=utf8 \
+-DDEFAULT_COLLATION=utf8_general_ci \
+-DWITH_EXTRA_CHARSETS=all \
+-DWITH_MYISAM_STORAGE_ENGINE=1 \
+-DWITH_INNOBASE_STORAGE_ENGINE=1 \
+-DWITH_MEMORY_STORAGE_ENGINE=1 \
+-DWITH_READLINE=1 \
+-DENABLED_LOCAL_INFILE=1 \
+-DMYSQL_DATADIR=/usr/local/mysql/data \
+-DMYSQL_USER=mysql
+
+make -j2      #-j2是指定用2个CPU核进行make
+make install
+```
+
+## 配置
+```
+chmod +w /usr/local/mysql
+chown -R mysql:mysql /usr/local/mysql
+ln -s /usr/local/mysql/lib/libmysqlclient.so.16 /usr/lib/libmysqlclient.so.16
+chown -R mysql:mysql /usr/local/mysql/
+
+cd /usr/local/mysql/support-files/
+cp my-large.cnf /etc/my.cnf             #一般只要运行这台命令
+cp mysql.server /etc/rc.d/init.d/mysqld
+chmod +x /etc/rc.d/init.d/mysqld
+
+vim /etc/rc.d/init.d/mysqld
+#确保有以下两行
+basedir=/usr/local/mysql
+datadir=/usr/local/mysql/data
+```
+
+---
+<font color="#EE3B3B" >开机启动</font>
+```
+# Centos 6
+chkconfig --add mysqld
+chkconfig --level 345 mysqld on
+
+# Centos 7
+systemctl enable mysqld
+```
+
+---
+<font color="#EE3B3B" >第一次运行设置密码</font>
+启动数据库后用`mysql -u root -p`然后直接回车，密码不用输直接回车。然后用以下语句修改密码(<font color="#EE3B3B" >只有root用户登录才能看到mysql用户表</font>)，如果无法连接数据库，先停止数据库，再按下面的方法初始化数据库后重新启动数据库。
+或者尝试：`mysql -uroot -S /usr/local/mysql/mysql.sock -p`进行登录。
+```
+show databases;
+use mysql;
+grant  all on *.* to root@'%' identified by 'password';
+grant  all on *.* to mysql@'%' identified by 'password';
+flush privileges;
+```
+修改好后，在第三方客户端登陆，本机命令行登录依然不用密码，要断开连接后重连才会生效。
+
+---
+<font color="#EE3B3B" >初始化数据库（用于sock文件丢失无法登陆时）（貌似数据不会丢）</font>
+```
+/usr/local/mysql/scripts/mysql_install_db \
+--defaults-file=/etc/my.cnf \
+--basedir=/usr/local/mysql \
+--datadir=/usr/local/mysql/data \
+--user=mysql```
+
+
+<font color="#EE3B3B" >初始化的MySQL5.7.6+与MySQL5.6.xx不同之处</font>
+**初始化工具不同**
+MySQL5.6.xx使用的是mysql_install_db，MySQL5.7.6+官方推荐使用mysqld –initialize。
+
+**初始化数据库不同**
+MySQL5.6.xx初始化之后存在mysql,information_schema,performance_schema,test四个数据库，MySQL5.7.6+初始化之后存在mysql,information_schema,performance_schema,sys四个数据库。
+
+**初始化用户不同**
+MySQL5.6.xx初始化之后存在root@localhost,root@'::1',root@'hostname',''@'localhost',''@'hostname'五个用户，MySQL5.7.6+初始化之后存在mysql.sys,root@localhost用户
+
+**初始化root密码**
+MySQL5.6.xx初始化之后root用户密码为空，MySQL5.7.6+初始化之后会为root@localhost用户生成随机密码。
+
+参考：http://www.jb51.net/article/99965.htm
+http://www.cnblogs.com/qq78292959/archive/2012/11/21/2780917.html
+http://blog.csdn.net/daydreamingboy/article/details/8125700
+
+---
+<font color="#EE3B3B" >关于my.cnf文件位置</font>
+默认情况下，MySQL会依次按顺序查找如下几个路径来获取MySQL配置问文件：
+/etc/my.cnf
+/etc/mysql/my.cnf
+/etc/my.cnf/my.cnf
+/usr/local/mysql/my.cnf
+~/.my.cnf
+
+---     
+<font color="#EE3B3B" >关于安全模式</font>
+`/usr/local/mysql/bin/mysqld_safe --user=mysql & `    
+慎用安全模式，会清除sock文件，必须重新初始化数据库才能使用
+
+---
+# 常用操作
 ## 查看库，表类型（存储引擎）
 ```
 show databases;
@@ -68,6 +187,27 @@ mysql根据配置文件会限制server接受的数据包大小。有时候大的
 查看下max_allowed_packet是否编辑成功
 
 ---
+## 备份（导出）、恢复数据库
+### 备份一个数据库
+**通用方法**：
+`mysqldump -u user_name -p db_name > file_name.sql`
+或
+`mysqldump db_name > file_name.sql -u root -p `
+
+**windows**：进到MySQL的安装目录（bin下），运行：
+```
+mysqldump --opt -h192.168.0.156 -uusername -ppassword --skip-lock-tables database_name>database.sql```
+IP改为**localhost**也行。
+
+### 导出数据库中的一个表
+`mysqldump -u user_name -p db_name table_name> file_name.sql`
+
+---
+### 导入恢复
+```
+source /root/mydb123.sql
+#mysql -u用户名 -p 数据库名 < 数据库名.sql
+mysql -uuser_name -p mydb123 < /root/mydb123.sql```
 
 
 ---
@@ -92,7 +232,7 @@ mysql>`update user set password=password('你的密码') where user='root'; `
 mysql>`flush privileges;`
 
 ---
-## 设置数据库密码
+## 设置某个数据库的独立密码
 ```
 mysql -u root -p
 > （输入密码）
