--- a/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
+++ b/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
@@ -12,9 +12,8 @@ keywords: bat,cmd
 
 
 
-# bat命令
+# bat_cmd常用命令
 
-## cmd常用命令
 **::**　　　注释
 **md**　　　创建目录
 **xcopy**　　　xcopy要用绝对路径才能在脚本里运行，遇到目录会提示，要指定参数，具体参数看帮助`xcopy /?`
@@ -118,6 +117,32 @@ echo  ----------------------------------------------------------- >>SQL_bat.log
 goto exit
 :exit
 ```
+
+---
+# 功能实现
+## 远程执行程序、脚本
+下载PsExec：https://technet.microsoft.com/en-us/sysinternals/bb897553.aspx
+**下载页面有相关的使用说明**
+解压文件后把psexec放到你需要的位置，如果没有添加环境变量就要用绝对路径去执行。
+
+<font color="#EE9A00">常见用法</font>
+**语法**：`psexec 远程主机名/IP -u 用户名 -p 密码 [参数] [被执行的程序]`
+只在局域网内应用成功，外网没有测试过，用IP可能会连接不了远程主机，可能是防火墙的问题，可以改用主机名，在cmd里输入hostname查看主机名。
+
+```
+psexec \\hostname -u Administrator -p mypassword -i "D:\123.bat"
+psexec \\hostname -u Administrator -p mypassword -c "D:\123.bat"```
+
+**参数**：
+-i　　是执行远程相应位置的脚本。
+-c　　是复制本地脚本到远程执行。
+
+
+参考：
+http://blog.csdn.net/miss_easy/article/details/47780797
+http://blog.sina.com.cn/s/blog_4e46983d0101ovkw.html
+
+
 
 ---
 # 备份数据库
