--- a/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
+++ b/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
@@ -24,15 +24,17 @@ keywords: bat,cmd
 **puase**　　　结尾加上这个，不用**goto exit**则会等待用户按任意键后才会退出脚本。
 
 ---
-<font color=#0000EE>关于时间的获取</font>(格式：20170318)：
+# <font color=#0000EE>关于时间的获取</font>(格式：20170318)：
 win7中：`%DATE:~0,4%%DATE:~5,2%%DATE:~8,2%`
 win_server：`%date:~10,4%%date:~4,2%%date:~7,2%`
 
-<font color=#0000EE>电源管理</font>(具体参数看：shutdown /?)：
+---
+# <font color=#0000EE>电源管理</font>(具体参数看：shutdown /?)：
 在5：30分自动关机：`at 05:30 shutdown -s -f`
 在XXX分钟后重启：`shutdown -r -t 60`
 
-<font color=#0000EE>forfiles</font>命令（针对文件的操作命令）：
+---
+# <font color=#0000EE>forfiles</font>命令（针对文件的操作命令）：
 /p 指定的路径 
 /s 包括子目录 
 /m 查找的文件名掩码 
@@ -89,6 +91,43 @@ forfiles /p c:/ /s /m *.* /d t-01011993 /c "cmd /c echo @file is quite old!"```
 要按列格式列出驱动器 C: 上所有文件的扩展名，请键入：
 ```
 forfiles /p c:/ /s /m*.* /c "cmd /c echo extension of @file is 0x09@ext0x09"```
+
+---
+# <font color=#0000EE>for循环</font>
+for /?
+FOR 变量参照的替换已被增强。您现在可以使用下列
+选项语法:
+
+     ~I         - 删除任何引号(")，扩充 %I
+     %~fI        - 将 %I 扩充到一个完全合格的路径名
+     %~dI        - 仅将 %I 扩充到一个驱动器号
+     %~pI        - 仅将 %I 扩充到一个路径
+    %~nI        - 仅将 %I 扩充到一个文件名
+     %~xI        - 仅将 %I 扩充到一个文件扩展名
+     %~sI        - 扩充的路径只含有短名
+     %~aI        - 将 %I 扩充到文件的文件属性
+     %~tI        - 将 %I 扩充到文件的日期/时间
+     %~zI        - 将 %I 扩充到文件的大小
+     %~$PATH:I   - 查找列在路径环境变量的目录，并将 %I 扩充
+                   到找到的第一个完全合格的名称。如果环境变量名
+                   未被定义，或者没有找到文件，此组合键会扩充到
+                   空字符串
+
+可以组合修饰符来得到多重结果:
+
+     %~dpI       - 仅将 %I 扩充到一个驱动器号和路径
+     %~nxI       - 仅将 %I 扩充到一个文件名和扩展名
+     %~fsI       - 仅将 %I 扩充到一个带有短名的完整路径名
+     %~dp$PATH:i - 查找列在路径环境变量的目录，并将 %I 扩充
+                   到找到的第一个驱动器号和路径。 
+     %~ftzaI     - 将 %I 扩充到类似输出线路的 DIR
+
+
+## 删除D:\Logs下的空目录
+```
+for /f "delims=" %%a in ('dir D:\Logs /b /ad /s ^|sort /r' ) do rd /q "%%a" 2>nul
+```
+
 
 
 ---
