--- a/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
+++ b/source/_posts/环境搭建/2016-11-08-Zibbix监控.md
@@ -235,7 +235,7 @@ reboot   #重启SELinux才生效
 ```
 #下载安装包
 wget https://jaist.dl.sourceforge.net/project/zabbix/ZABBIX%20Latest%20Stable/3.0.8/zabbix-3.0.8.tar.gz
-tar zxvf zabbix-3.0.8.tar.gzls
+tar zxvf zabbix-3.0.8.tar.gz
 cd zabbix-3.0.8
 
 #编译安装
