--- a/source/_posts/系统管理/2016-11-08-检查Linux服务器性能.md
+++ b/source/_posts/系统管理/2016-11-08-检查Linux服务器性能.md
@@ -70,6 +70,36 @@ Linux 3.13.0-49-generic (titanclusters-xxxxx)  07/14/2015  _x86_64_ (32 CPU)
 该命令可以显示每个CPU的占用情况，如果有一个CPU占用率特别高，那么有可能是一个单线程应用程序引起的。
 
 ---
+# netstat
+```
+[root@VM_163_167_centos ~]# netstat
+Active Internet connections (w/o servers)
+Proto Recv-Q Send-Q Local Address               Foreign Address             State      
+tcp        0      0 10.104.163.xxx:noteit       10.xxx.30.181:http          TIME_WAIT   
+tcp        0      1 10.104.163.xxx:9409         202.xxx.210.:zabbix-trapper SYN_SENT    
+tcp        0     64 10.104.163.xx:EtherNet/IP-1 119.xxx.171.169:53248       ESTABLISHED 
+Active UNIX domain sockets (w/o servers)
+Proto RefCnt Flags       Type       State         I-Node Path
+unix  6      [ ]         DGRAM                    8198   /dev/log
+unix  2      [ ]         DGRAM                    7360   @/org/kernel/udev/udevd
+unix  2      [ ]         DGRAM                    20331950 
+unix  2      [ ]         DGRAM                    9274951 
+unix  2      [ ]         STREAM     CONNECTED     10014  
+unix  2      [ ]         DGRAM                    9494   
+unix  2      [ ]         DGRAM                    9459   
+unix  3      [ ]         STREAM     CONNECTED     9437   
+unix  3      [ ]         STREAM     CONNECTED     9436   
+unix  3      [ ]         STREAM     CONNECTED     8612   
+unix  3      [ ]         STREAM     CONNECTED     8611   
+unix  3      [ ]         STREAM     CONNECTED     8609   
+unix  3      [ ]         STREAM     CONNECTED     8608   
+unix  3      [ ]         STREAM     CONNECTED     8606   
+unix  3      [ ]         STREAM     CONNECTED     8605   
+
+```
+
+
+---
 # pidstat 1
 
 ```
