--- a/source/_posts/环境搭建/2017-04-08-邮件服务器.md
+++ b/source/_posts/环境搭建/2017-04-08-邮件服务器.md
@@ -34,6 +34,15 @@ TXT记录一般用来做反垃圾邮件，格式有很多种：
 * "v=spf1 ip4:邮件服务器的IP ~all"
 
 ---
+## DNS反向解析（PTR）
+解析测试：https://mxtoolbox.com/SuperTool.aspx
+输入邮件服务器的IP检测
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170413/155031547.png)
+如果是没有设置DNS反向解析，有些邮件服务器是不接受没有PTR的邮件的，会拒收，导致无法发送给对方，也会导致部分邮件丢件。
+
+这时需要联系ISP（提供公网固定IP的服务商），叫他们添加DNS反向解析，把邮件服务器IP，指向到你的邮件域名。如果ISP无法帮你设置，在**群晖Synology**中可以把网线直连NAS，不要经过路由，在NAS中获取IP，然后搭建DNS服务器。在**Win_Server**中也可以添加DNS服务器后添加反向解析，具体方法请自行搜索。
+
+---
 ## 域名解析测试验证
 win中用nslookup测试：http://jingyan.baidu.com/article/ce09321b2bae742bfe858f59.html
 只要符合**@ \-\--》MX \-\--》mail.域名 \-\--》A \-\--》IP**这样的话应该是正确的，能够正常收发邮件。
@@ -77,8 +86,15 @@ http://www.mamicode.com/info-detail-1370549.html
 http://www.360doc.com/content/09/0924/12/32573_6370328.shtml
 https://msdn.microsoft.com/zh-cn/library/dn292550.aspx
 
-
-<font color=#A52A2A>截图看本地磁盘的备份文件夹（重要）</font>
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130228027.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130242002.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130253217.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130301361.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130308602.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130315954.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130322970.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130330673.png)
+![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170410/130338673.png)
 
 ---
 ## 测试SMTP(包括中继模式）
