--- a/source/_posts/虚拟化/2016-11-03-Docker安装.md
+++ b/source/_posts/虚拟化/2016-11-03-Docker安装.md
@@ -35,7 +35,7 @@ EOF```
 
 安装
 ```
-yum install docker-engine
+yum install docker-engine -y
 systemctl enable docker.service
 systemctl start docker```
 
