--- a/source/_posts/环境搭建/2017-04-08-邮件服务器.md
+++ b/source/_posts/环境搭建/2017-04-08-邮件服务器.md
@@ -104,10 +104,16 @@ https://msdn.microsoft.com/zh-cn/library/dn292550.aspx
 FROM:mail.travelwebsite@travelwebsite.com     #发件箱必须为你在邮件服务器上设置的那个账户，否则没有权限发送
 TO:842632422@qq.com
 SUBJECT: Test email from SMTP
-This is a test email sent from my SMTP server```
+This is a test email sent from my SMTP server
+
+[上面要空一行，不然邮件的内容会变成标题]这里是body，邮件内容```
 * 将email.txt复制到如下路径**c:\inetpub\mailroot\pickup**(SMTP的默认目录)
 
 关于报错：[IIS 拾取目录](https://torontoprogrammer.ca/2011/04/fixing-the-cannot-get-iis-pickup-directory-error-in-asp-net/)
+
+windows测试工具：
+http://ofyfogrgx.bkt.clouddn.com/image/20170413/170002671.exe
+http://ofyfogrgx.bkt.clouddn.com/image/20170413/170020980.exe
 
 Windows下通过程序实现SMTP发送邮件（本人未测试）：http://www.jianshu.com/p/5005a8642103
 
