--- a/source/_posts/环境搭建/2017-04-08-邮件服务器.md
+++ b/source/_posts/环境搭建/2017-04-08-邮件服务器.md
@@ -36,7 +36,7 @@ TXT记录一般用来做反垃圾邮件，格式有很多种：
 ---
 ## DNS反向解析（PTR）
 解析测试：https://mxtoolbox.com/SuperTool.aspx
-输入邮件服务器的IP检测
+输入邮件服务器的域名检测
 ![mark](http://ofyfogrgx.bkt.clouddn.com/image/20170413/155031547.png)
 如果是没有设置DNS反向解析，有些邮件服务器是不接受没有PTR的邮件的，会拒收，导致无法发送给对方，也会导致部分邮件丢件。
 
