--- a/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
+++ b/source/_posts/Dev/2017-03-18-cmd_bat脚本.md
@@ -162,7 +162,7 @@ goto exit
 ## 远程执行程序、脚本
 下载PsExec：https://technet.microsoft.com/en-us/sysinternals/bb897553.aspx
 **下载页面有相关的使用说明**
-解压文件后把psexec放到你需要的位置，如果没有添加环境变量就要用绝对路径去执行。
+解压文件后把psexec放到你需要的位置，如果没有添加环境变量就要用绝对路径去执行。目标主机的防火墙要开135,139这两个端口。
 
 <font color="#EE9A00">常见用法</font>
 **语法**：`psexec 远程主机名/IP -u 用户名 -p 密码 [参数] [被执行的程序]`
