--- a/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
+++ b/source/_posts/杂项/2016-11-25-操作系统常用配置设置.md
@@ -16,7 +16,8 @@ sudo vim /usr/share/lightdm/lightdm.conf.d/50-ubuntu.conf
 greeter-show-manual-login=true
 然后修改密码
 sudo passwd root
-重启系统```
+重启系统
+```
 
 ---
 ## 允许root用户登录ssh
@@ -27,13 +28,6 @@ PermitRootLogin yes
 #保存退出重启服务
 sudo service ssh restart
 ```
-
-
-
-
-
-
-
 
 
 ---
