--- a/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
+++ b/source/_posts/环境搭建/2016-11-17-Mac常用工具-技巧.md
@@ -16,7 +16,8 @@ date: 2016-11-17 15:17:05
 ---
 **Homebrew - Mac OSX 的包管理**
 ```
-ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"```
+ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"
+```
 
 ---
 **XCode **
@@ -25,7 +26,8 @@ ruby -e "$(curl -fsSL https://raw.github.com/Homebrew/homebrew/go/install)"```
 ---
 **wget**
 ```
-brew install wget```
+brew install wget
+```
 有时遇到默认的下载链接速度十分坑爹，就 brew edit wget 修改下链接再装
 
 ---
@@ -35,7 +37,8 @@ https://www.zhihu.com/question/27447370
 ---
 **[Oh-my-zsh](https://github.com/robbyrussell/oh-my-zsh)**
 ```
-wget --no-check-certificate https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh```
+wget --no-check-certificate https://github.com/robbyrussell/oh-my-zsh/raw/master/tools/install.sh -O - | sh
+```
 重新打开终端就好了。
 卸载：`uninstall_oh_my_zsh`
 
@@ -49,12 +52,14 @@ Linux：
 wget https://github.com/downloads/joelthelion/autojump/autojump_v21.1.2.tar.gz
 tar zxvf autojump_v21.1.2.tar.gz
 cd autojump_v21.1.2
-./install.sh```
+./install.sh
+```
 
 修改配置文件
 `vim ~/.zshrc`加入以下这句
 ```
-[[ -s ~/.autojump/etc/profile.d/autojump.sh ]] && . ~/.autojump/etc/profile.d/autojump.sh```
+[[ -s ~/.autojump/etc/profile.d/autojump.sh ]] && . ~/.autojump/etc/profile.d/autojump.sh
+```
 
 
 ---
@@ -75,20 +80,8 @@ Please contact your system administrator.
 Add correct host key in /Users/watsy/.ssh/known_hosts to get rid of this message.  
 Offending RSA key in /Users/watsy/.ssh/known_hosts:1  
 RSA host key for 192.168.2.108 has changed and you have requested strict checking.  
-Host key verification failed.  ```
+Host key verification failed.  
+```
 这时只要执行`rm -rf ~/.ssh/known_hosts`删除记录主机信息的文件就可以重新连接了。
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
