--- a/source/_posts/环境搭建/2017-02-27-Redis.md
+++ b/source/_posts/环境搭建/2017-02-27-Redis.md
@@ -21,7 +21,8 @@ tar xzf redis-2.8.9.tar.gz
 cd redis-2.8.9
 make
 make test
-make install```
+make install
+```
 
 测试通过后安装，安装后会自动把redis-server,redis-cli,redis-benchmark,redis-check-aof,redis-check-dump复制到**/usr/local/bin**目录下。
 
@@ -131,23 +132,4 @@ http://doc.redisfans.com/
 ---
 # Redis快速入门
 http://www.yiibai.com/redis/redis_quick_guide.html
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
