--- a/source/_posts/环境搭建/2017-03-18-Rsync.md
+++ b/source/_posts/环境搭建/2017-03-18-Rsync.md
@@ -103,7 +103,8 @@ gid = 0
 
 ```
 rsync -auvz --delete SvcCWRSYNC@172.16.16.80::api /cygdrive/c/Project
-rsync -auvz --delete SvcCWRSYNC@172.16.16.80::api2 /cygdrive/c/Project/APIS_Mobile ```
+rsync -auvz --delete SvcCWRSYNC@172.16.16.80::api2 /cygdrive/c/Project/APIS_Mobile 
+```
 
 
 ---
