--- a/source/_posts/环境搭建/2017-04-08-邮件服务器.md
+++ b/source/_posts/环境搭建/2017-04-08-邮件服务器.md
@@ -106,7 +106,8 @@ TO:842632422@qq.com
 SUBJECT: Test email from SMTP
 This is a test email sent from my SMTP server
 
-[上面要空一行，不然邮件的内容会变成标题]这里是body，邮件内容```
+[上面要空一行，不然邮件的内容会变成标题]这里是body，邮件内容
+```
 * 将email.txt复制到如下路径**c:\inetpub\mailroot\pickup**(SMTP的默认目录)
 
 关于报错：[IIS 拾取目录](https://torontoprogrammer.ca/2011/04/fixing-the-cannot-get-iis-pickup-directory-error-in-asp-net/)
@@ -159,3 +160,4 @@ SMTP设置（发送）
 
 
 ---
+
