--- a/source/_posts/环境搭建/2017-04-14-FTP.md
+++ b/source/_posts/环境搭建/2017-04-14-FTP.md
@@ -27,7 +27,8 @@ chroot_local_user=YES   #禁止跳出家目录
 useradd -s /sbin/nologin -d /var/www/html(指定家目录) ftp_username
 
 passwd ftp_username
-chmod o+w /var/www/html(家目录)```
+chmod o+w /var/www/html(家目录)
+```
 
 要关闭selinux(修改配置文件要重启生效)，现在立刻生效：`setenforce 0`
 
@@ -56,3 +57,4 @@ http://www.linuxidc.com/Linux/2013-09/90560.htm
 
 
 ---
+
