--- a/source/_posts/系统管理/2016-11-02-grub引导修复.md
+++ b/source/_posts/系统管理/2016-11-02-grub引导修复.md
@@ -62,7 +62,8 @@ grub >`boot`
 在终端里运行
 ```
 sudo update-grub`
-sudo grub-install /dev/sda```
+sudo grub-install /dev/sda
+```
 
 * 6、重启，搞定！！
 
@@ -93,7 +94,8 @@ sudo dd if=ubuntu-13.10-desktop-amd64.iso of=/dev/sdb1 #/dev/sdb1 为 USB 盘符
 ```
 sudo mount --bind /dev /mnt/dev
 sudo mount --bind /proc /mnt/proc
-sudo mount --bind /sys /mnt/sys```
+sudo mount --bind /sys /mnt/sys
+```
 
 * 5.Chroot 到硬盘上的 Linux 系统
 代码如下：
