--- a/source/_posts/数据库/2016-11-03-MySQL数据库.md
+++ b/source/_posts/数据库/2016-11-03-MySQL数据库.md
@@ -94,7 +94,8 @@ flush privileges;
 --defaults-file=/etc/my.cnf \
 --basedir=/usr/local/mysql \
 --datadir=/usr/local/mysql/data \
---user=mysql```
+--user=mysql
+```
 
 
 <font color="#EE3B3B" >初始化的MySQL5.7.6+与MySQL5.6.xx不同之处</font>
@@ -137,7 +138,8 @@ use weixin888;
 show tables;                            #只能显示表名，不能得到表类型的信息
 SHOW TABLE STATUS FROM `weixin888`;     #weixin888是库名,显示的（所有表的信息）第二项type即是表的类型
 describe `rediscache`;                  #rediscache是表名，就能看到Type的类型
-SHOW CREATE TABLE `rediscache`;         #显示的是表创建时的信息，其中有TYPE或ENGINE一项，指定了表的类型```
+SHOW CREATE TABLE `rediscache`;         #显示的是表创建时的信息，其中有TYPE或ENGINE一项，指定了表的类型
+```
 
 ---
 ## 修改表类型（修改存储引擎）
@@ -152,7 +154,8 @@ CREATE TABLE `rediscache` (
 `send_time` datetime default NULL,
 `del_flag` tinyint(4) default '0',
 PRIMARY KEY (`id`)
-) ENGINE=MYISAM;```
+) ENGINE=MYISAM;
+```
 
 ### 创建后修改存储引擎
 ```
@@ -167,7 +170,8 @@ SHOW CREATE TABLE `rediscache`;   #能看到存储引擎
 
 格式：alter table 表名 modify column 字段名 类型;
 alter table rediscache modify column data varchar(500);
-alter table rediscache modify column data longtext;```
+alter table rediscache modify column data longtext;
+```
 
 ---
 ## mysql max_allowed_packet 设置过小导致记录写入失败
@@ -189,17 +193,20 @@ mysql根据配置文件会限制server接受的数据包大小。有时候大的
 ---
 ## max_connection 关于最大连接数
 ```
-MySQL> show status like '%connect%';```
+MySQL> show status like '%connect%';
+```
 **connections**:试图连接到MySQL服务器的连接数（不管成功与否）。
 **max_used_connections**:每个数据库用户的最大连接数。
 **threads_connected**:当前的连接数。
 
 ```
-mysql> show variables like '%connect%';```
+mysql> show variables like '%connect%';
+```
 **max_connections**:数据库服务器最大连接数。
 
 ```
-mysql> show processlist;```
+mysql> show processlist;
+```
 显示当前正在执行的MySQL连接。
 
 修改连接数直接修改配置文件，加上对应的语句就行，如：
@@ -219,7 +226,8 @@ mysql> show processlist;```
 
 **windows**：进到MySQL的安装目录（bin下），运行：
 ```
-mysqldump --opt -h192.168.0.156 -uusername -ppassword --skip-lock-tables database_name>database.sql```
+mysqldump --opt -h192.168.0.156 -uusername -ppassword --skip-lock-tables database_name>database.sql
+```
 IP改为**localhost**也行。
 
 ### 导出数据库中的一个表
@@ -230,7 +238,8 @@ IP改为**localhost**也行。
 ```
 source /root/mydb123.sql
 #mysql -u用户名 -p 数据库名 < 数据库名.sql
-mysql -uuser_name -p mydb123 < /root/mydb123.sql```
+mysql -uuser_name -p mydb123 < /root/mydb123.sql
+```
 
 
 ---
@@ -262,7 +271,8 @@ mysql -u root -p
 > create user '用户名'@'localhost' identified by '密码';
 > grant all privileges on 库名.* to '用户名'@'localhost';
 > flush privileges;
-> exit;```
+> exit;
+```
 
 ---
 ## 修改Mysql密码
@@ -347,7 +357,8 @@ LastName varchar(15),
 Age int
 )";
 
-mysql_query($sql,$con);```
+mysql_query($sql,$con);
+```
 
 ---
 
@@ -357,7 +368,8 @@ mysql_query($sql,$con);```
 ```mysql
 mysql> CREATE DATABASE 库名;
 mysql> USE 库名;
-mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));```
+mysql> CREATE TABLE 表名 (字段名 VARCHAR(20), 字段名 CHAR(1));
+```
 
 ---
 ## 创建表
@@ -370,7 +382,8 @@ create table pet(
         sex char(1),             #性别
         birth date,              #出生日期
         death date               #死亡日期
-)```
+)
+```
 
 为了验证你的表是按你期望的方式创建，使用一个**DESCRIBE**语句：
 ![](http://ofyfogrgx.bkt.clouddn.com//blog/mysql%E6%95%B0%E6%8D%AE%E5%BA%93001.jpg)
@@ -387,7 +400,8 @@ create table customers(
     age int not null,
     love char(50) not null default 'No habbit',
     primary key(id)
-)engine=InnoDB;```
+)engine=InnoDB;
+```
 
 **SELECT last_insert_id();**这个函数可以获得返回最后一个**auto_increment**值。默认值为：default 'No habbit',
 引擎类型，多为**engine = InnoDB**，如果省略了**engine=**语句，则使用默认的引擎(MyISAM)
@@ -409,7 +423,8 @@ mysql> `DELETE FROM 表名;`
 语法
 ```mysql
 DELETE FROM table_name
-WHERE column_name = some_value```
+WHERE column_name = some_value
+```
 
 注释：SQL 对大小写不敏感。DELETE FROM 与 delete from 等效。
 为了让 PHP 执行上面的语句，我们必须使用 **mysql_query**( 函数。该函数用于向 SQL 连接发送查询和命令。
@@ -434,7 +449,8 @@ mysql_select_db("my_db", $con);
 mysql_query("DELETE FROM Persons WHERE LastName='Griffin'");
 
 mysql_close($con);
-?>```
+?>
+```
 在这次删除之后，表是这样的：
 
 |FirstName|LastName|Age|
@@ -453,7 +469,8 @@ mysql_close($con);
 mysql
 UPDATE table_name
 SET column_name = new_value
-WHERE column_name = some_value```
+WHERE column_name = some_value
+```
 
 注释：SQL 对大小写不敏感。UPDATE 与 update 等效。
 为了让 PHP 执行上面的语句，我们必须使用 mysql_query( 函数。该函数用于向 SQL 连接发送查询和命令。
@@ -479,7 +496,8 @@ mysql_query("UPDATE Persons SET Age = '36'
 WHERE FirstName = 'Peter' AND LastName = 'Griffin'");
 
 mysql_close($con);
-?>```
+?>
+```
 在这次更新后，"Persons" 表格是这样的：
 
 |FirstName|LastName|Age|
@@ -491,11 +509,13 @@ mysql_close($con);
 ## 插入
 ```
 INSERT INTO table_name
-VALUES (value1, value2,....)```
+VALUES (value1, value2,....)
+```
 您还可以规定希望在其中插入数据的列：
 ```
 INSERT INTO table_name (column1, column2,...)
-VALUES (value1, value2,....)```
+VALUES (value1, value2,....)
+```
 注释：SQL 语句对大小写不敏感。**INSERT INTO 与 insert into** 相同。
 
 
@@ -519,7 +539,8 @@ mysql_query("INSERT INTO Persons (FirstName, LastName, Age)
 VALUES ('Glenn', 'Quagmire', '33')");
 
 mysql_close($con);
-?>```
+?>
+```
 
 ---
 
@@ -534,7 +555,8 @@ mysql_close($con);
 - 添加id字段：
 ```
 alter table pet add id int not null
-primary key auto_increment first;```
+primary key auto_increment first;
+```
 详见：http://www.cnblogs.com/beginman/p/3249472.html
 
 ---
@@ -553,7 +575,8 @@ Age: <input type="text" name="age" />
 </form>
 
 </body>
-</html>```
+</html>
+```
 
 当用户点击上例中 HTML 表单中的提交按钮时，表单数据被发送到 "insert.php"。"insert.php" 文件连接数据库，并通过 **$_POST** 变量从表单取回值。然后，mysql_query() 函数执行 **INSERT INTO** 语句，一条新的记录会添加到数据库表中。
 下面是 "insert.php" 页面的代码：
@@ -578,7 +601,8 @@ if (!mysql_query($sql,$con))
 echo "1 record added";
 
 mysql_close($con)
-?>```
+?>
+```
 
 ---
 
@@ -591,14 +615,16 @@ mysql_close($con)
 ## 查看表
 ```
 USE blog;
-SHOW TABLES;```
+SHOW TABLES;
+```
 
 ---
 ## 查看表中的列、类型
 ```
 SHOW COLUMNS FROM auth_user; 
 或
-DESCRIBE auth_user;```
+DESCRIBE auth_user;
+```
 **describe 表名** 是 **show columns from 表名** 的一种快捷方式。
 
 
@@ -630,7 +656,8 @@ while($row = mysql_fetch_array($result))
   }
 
 mysql_close($con);
-?>```
+?>
+```
 
 上面这个例子在 `$result `变量中存放由 `mysql_query()` 函数返回的数据。接下来，我们使用 `mysql_fetch_array() `函数以数组的形式从记录集返回第一行。每个随后对 `mysql_fetch_array()` 函数的调用都会返回记录集中的下一行。 `while loop `语句会循环记录集中的所有记录。为了输出每行的值，我们使用了 PHP 的 `$row `变量( `$row['FirstName']` 和 `$row['LastName']`)。
 以上代码的输出：
@@ -672,7 +699,8 @@ while($row = mysql_fetch_array($result))
 echo "</table>";
 
 mysql_close($con);
-?>```
+?>
+```
 以上代码的输出：
 
 |FirstName|LastName|
@@ -709,7 +737,8 @@ $con = mysql_connect("localhost","peter","abc123");
 if (!$con)
   {
   die('Could not connect: ' . mysql_error());
-  }```
+  }
+```
 
 
 创建：
@@ -740,6 +769,8 @@ Age int
 mysql_query($sql,$con);
 
 mysql_close($con);   //提前关闭连接，请使用 mysql_close() 函数,不加此句则脚本结束后关闭。
-?>```
+?>
+```
 
 ---
+
